Increase the default memory size for amd64 to 128M.

Improve progress messages when creating the disk image.

When execing /bin/sh, wait for its prompt before sending
it a command.

- 1.27 released -

Run shell commands on the target system using /bin/sh rather
than root's login shell, as sysinst no longer sets the login
shell to /bin/sh by default.

- 1.26 released -

Track the sysinst changes of 2012-04-06 introducing the new
post-install configuration menu.

Print a message before creating the disk image, as it can take
a long time and make it appear that anita has hung.

- 1.25 released -

Before running a shell command on the system under test, change the
shell prompt to a more distinctive one to reduce the risk of command
output being mistaken for a prompt.

Support installing SPARC ISOs having a non-numeric suffix following
the version number, such as NetBSD-6.0_BETA-sparc.iso.

Added experimental support for using Xen instead of qemu as the
virtual machine monitor.  This is enabled by specifying "--vmm xen" on
the anita command line while running as root in a Xen dom0.

New command line option "--persist".

- 1.24 released -

Support the new distribution ISO naming scheme, e.g.,
NetBSD-5.99.60-sparc.iso instead of sparccd.iso.

Support installation of the X11 and source sets.

On unknown platforms, use mkisofs instead of genisoimage.

On sparc, the scratch disk is sd1c, not wd1d.

Allow a full hour for extracting sets.

Deal with the backwards incompatible renaming of "qemu" to
"qemu-system-i386" in qemu 1.0.

After running the ATF tests, run "ps" to show any processes possibly
left running by the tests.

- 1.23 released -

Support qemu 0.15, where the output of the "info block" monitor
command has backwards-incompatibly changed to no longer include a
"type" field.

- 1.22 released -

New command line option "--memory-size".

- 1.21 released -

Disk images no longer contain holes, making them easier to use with